--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
     <!--        <p>THEME MADE BY <a href="https://zhangxin.cn/">zhangxin</a></p>-->
 </div>
 
+<!--<div  class="headline"><div class="icon_text"><a href="/search?q=%e7%be%8e%e6%b4%b2%e7%8b%ae&amp;FORM=hpcapt&amp;filters=HpDate:&quot;20220915_1600&quot;" data-h="ID=HpApp,27763.1"><div class="icon"><svg class="mappin" height="16" width="16" viewBox="0 0 12 12" aria-hidden="true" role="presentation"><path d="M0 0h12v12h-12z" fill="none"></path><path d="M6.5 3a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0-1.5-1.5zm0-3a4.5 4.5 0 0 0-4.5 4.5 5.607 5.607 0 0 0 .087.873c.453 2.892 2.951 5.579 3.706 6.334a1 1 0 0 0 1.414 0c.755-.755 3.253-3.442 3.706-6.334a5.549 5.549 0 0 0 .087-.873 4.5 4.5 0 0 0-4.5-4.5zm3.425 5.218c-.36 2.296-2.293 4.65-3.425 5.782-1.131-1.132-3.065-3.486-3.425-5.782a4.694 4.694 0 0 1-.075-.718 3.5 3.5 0 0 1 7 0 4.634 4.634 0 0 1-.075.718z"></path></svg></div><h1 class="text" id="headline">敏捷而隐秘</h1></a></div><div class="nav"><a href="#" data-h="ID=HpApp,19231.1" id="leftNav" class="leftNav " role="button" aria-label="上一个图像"></a><a href="#" data-h="ID=HpApp,21465.1" id="rightNav" class="rightNav disabled" role="button" aria-label="下一个图像"></a></div></div>-->
+
 <audio autoplay id="msc" src="https://api.uomg.com/api/rand.music?sort=any">
 </audio>
 <script>
