--- a/index.html
+++ b/index.html
@@ -130,10 +130,8 @@
                 <br/>
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                 <span style="color: blue;">cat me.txt</span>
-                <p>单身27，30岁的灵魂，20岁的外貌。</p>
                 <p>爱好：程序设计、美食烹饪、魔术表演、游泳健身、旅行登高、动漫影视</p>
-                <p>坐标杭州，Java开发工程师。</p>
-                <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                <p>坐标上海，Java开发工程师。</p>
                 <span style="color: blue">sudo rm -rf /所有的缺点和不足/*</span>
                 <p><span style="color: rgb(238, 154, 0)">Warning: </span><span>做人不要太贪心~</span></p>
             </div>
